# milespy

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  examples_sfh.py  examples_ssp_models.py  examples_stellar_libraries.py  pyproject.toml
.github/workflows/: docs.yml  publish.yml  pymiles-dev.yml  test.yml
docs/: biblio.bib  conf.py  configuration.rst  development.rst  index.rst  installation.rst  references.rst  units.rst
docs/_static/: custom.css
docs/reference/: index.rst
docs/tutorials/: example_color_grid.ipynb  example_sfh.ipynb  example_simulation_data.ipynb  example_ssp.ipynb  example_stellar_library.ipynb  index.rst  stars.txt
examples/: examples_sfh.py  examples_ssp_models.py  examples_stellar_libraries.py
milespy/: __init__.py  ls_indices.py  magnitudes.py  repository.py  spectra.py  ssp_library.py  stellar_library.py
milespy/config_files/: ls_indices_full.def
pymiles/: Links.md  README.md  __init__.py  cap_utils.py  configuration.py  filter.py  load_hdf5.py  ls_indices.py  magnitudes.py  misc.py  misc_functions.py  pymiles_utils.py  repository  repository.py  sfh.py  spectra.py  ssp_library.py  ssp_models.py  stellar_library.py  tuning_tools.py  write_miles_results.py
pymiles/config_files/: ls_indices_full.def
pymiles/scripts/: cap_utils.py  load_hdf5.py  misc_functions.py  pymiles_utils.py  sfh.py  sfh_class.py  sfh_class_JFB_vNEW.py  sfh_class_original.py  ssp_models.py  ssp_models_class.py  stellar_library.py  stellar_library_class.py  tuning_tools.py  tuning_tools_class.py  write_miles_results.py  write_miles_results_class.py  (+1 more)
test/: conftest.py  filters_test.py  ls_test.py  magnitude_test.py  ml_test.py  sfh_test.py  spectra_test.py  ssp_test.py  stellar_library_test.py  test_filters.py
(+1 files in other folders)
