[tool.poetry]
name = "pymiles"
version = "0.0.1"
authors = [
  "TODO <TODO@iac.es>"
]
maintainers = [
  "Isaac Alonso Asensio <isaac.alonso.asensio@iac.es>"
]
description = "Wrapper for the MILES spectral library"
readme = "README.md"
packages = [{include = "pymiles"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.11.0"
scipy = "^1.9"
astropy = "^5.2"
matplotlib = "^3.7"
numpy = "^1.24"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.5"
pylint = "^3.2.0"
