[tool.poetry]
name = "pymiles"
version = "0.0.1"
authors = [
  "TODO <TODO@iac.es>"
]
maintainers = [
  "Isaac Alonso Asensio <isaac.alonso.asensio@iac.es>"
]
description = "Wrapper for the MILES spectral library"
readme = "README.md"
packages = [{include = "pymiles"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.11.0"
scipy = "^1.9"
astropy = "^5.2"
specutils = "^1.15"
matplotlib = "^3.7"
numpy = "^1.24"
requests = "^2.31.0"
tqdm = "^4.66.4"
rcfile = "^0.1.4"
Sphinx = { version = "^7.1.2", optional = true }
sphinx-rtd-theme = { version = "^2.0.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
nbsphinx = { version = "^0.9.4", optional = true}
numpydoc = { version = "^1.7.0", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "numpydoc", "nbsphinx"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.5"
pylint = "^3.2.0"
pytest = "^8.2.0"
pytest-mpl = "^0.17.0"
pytest-html = "^4.1.1"

[tool.isort]
profile = "black"
